# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ALU.h.6C0E6E34A941111B.idx  LSB.h.E10C248F48E8B699.idx  RS.h.D1AC80ADE3B3DF79.idx  RoB.h.BD5DCCEC40F2BC50.idx  common.h.5F605D9B023C3B63.idx  cpu.h.98ABDAACED170C2E.idx  decoder.h.ECAC32917829625A.idx  instruction.h.6162D22532931B33.idx  main.cpp.EB801357A1EC4886.idx  memory.h.B1A11CAA63D2A23B.idx  register.h.8CAA56031CE82B3B.idx
include/: ALU.h  LSB.h  ROB.h  RS.h  RoB.h  common.h  cpu.h  decoder.h  instruction.h  memory.h  predictor.h  register.h
src/: LSB.cpp  RS.cpp  RoB.cpp  decoder.cpp  instruction.cpp  main.cpp  memory.cpp
